# scatterem

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS.md  MAINTAINERS.md  PUBLICATION_DAY.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRIAGE.md  core.html  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.md  q-and-a.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: publish.yml  test.yml
_proc/: 00_core.ipynb  index.ipynb
conda/scatterem/: meta.yaml
docs/: README.md
example/: Fig1_Gd2O3.py  Fig2_Co3O4.py  Fig2_carbon.py  Fig4_diffraction.py  Fig4_nanotube.py  Fig5_bio.py  Fig6_vlp.py  README.md
nbs/: 00_core.ipynb  01_operators.ipynb  index.ipynb  nbdev.yml
scatterem/: __init__.py  _modidx.py
scatterem2/: __init__.py
scatterem2/io/: __init__.py  file_readers.py  serialize.py
scatterem2/nn/functional/: __init__.py  ptychography.py
scatterem2/nn/functional/warp/: __init__.py  ptychography.py
scatterem2/reconstruction/: _init_.py  direct_ptychography.py  fused_full_field.py  tilt_corrected_dark_field.py
scatterem2/utils/: __init__.py  energy.py  registration.py  stem.py  transfer.py  utils.py  validators.py
scatterem2/utils/data/: __init__.py  aberrations.py  data_classes.py  datasets.py  unittensor.py
scatterem2/utils/warp/: __init__.py  complex.py  misc.py  transfer.py
scatterem2/vis/: __init__.py  custom_normalizations.py  visualization.py  visualization_utils.py
tests/: test_public_scaffold.py
