[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scatterem"
version = "0.1.0"
description = "Collection of scattering and electron microscopy tools"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Philipp Pelz", email = "philipp.pelz@yahoo.de" },
]
keywords = ["electron-microscopy", "ptychography", "scattering", "wave-propagation", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "matplotlib>=3.7.0",
    "torch>=2.5.0",
    "lightning>=2.5.0",
    "h5py>=3.8.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "warp-lang>=1.7.0",
    "dill>=0.3.7",
    "zarr>=2.16.0",
    "kornia>=0.8.0",
    "multipledispatch>=0.6.0",
    "colorspacious>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/ECLIPSE-Lab/scatterem"
Repository = "https://github.com/ECLIPSE-Lab/scatterem"
Documentation = "https://github.com/ECLIPSE-Lab/scatterem#readme"
Issues = "https://github.com/ECLIPSE-Lab/scatterem/issues"

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
dev = [
    { include-group = "test" },
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.11.5",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scatterem"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "ruff>=0.11.5",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
exclude = [
    "build/",
    "dist/",
    ".eggs/",
    ".git/",
    ".venv/",
    "venv/",
    "env/",
    "*.egg-info/",
    "__pycache__/",
    ".pytest_cache/",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
    "E501",
    "F401",
    "F403",
    "F405",
    "F811",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I001"]
"tests/**/*.py" = ["E501", "F401"]
"example/**/*.py" = ["E501", "F401", "F403"]

[tool.ruff.format]
exclude = ["*.ipynb"]
